--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "axios": "^1.7.9",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.6",
-    "next": "15.1.6",
+    "next": "^15.5.9",
     "postcss": "^8.5.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.4.1",
     "stripe": "^17.6.0",
     "tailwindcss": "^3.4.17",
